--- a/src/pages/Home/index.html
+++ b/src/pages/Home/index.html
@@ -26,7 +26,7 @@
         </label>
         <button type="button">
           <span class="hidden">Buscar por filme</span>
-          <img src="../assets/search-icon.svg" alt="Ícone de uma lupa">
+          <img src="../../assets/search-icon.svg" alt="Ícone de uma lupa">
         </button>
       </div>
       <div class="input-checkbox-container">
@@ -37,36 +37,9 @@
   </section>
 
   <main>
-    <div class="container">
-      <div class="movie-information-container">
-        <div class="movie-details">
-          <div class="movie-image">
-            <img src="https://source.unsplash.com/featured/200x200" alt="Imagem ilustrativa">
-          </div>
-          <div class="movie-information">
-            <h2>Avengers Endgame (2019)</h2>
-            <div class="movie-score-fovorite-container">
-              <div class="score">
-                <img src="../assets/star.svg" alt="Ícone de uma estrela">
-                <span>9.2</span>
-              </div>
-              <div class="favorite">
-                <img src="../assets/heart.svg" alt="Ícone de um coração">
-                <span>Favoritar</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="movie-description">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis aut possimus autem fugit temporibus
-            reprehenderit corporis, molestias nesciunt laboriosam sunt tenetur voluptatum eum? Asperiores, tempora iusto
-            sunt aliquid iste neque.
-          </p>
-        </div>
-      </div>
-    </div>
+    <div class="container" id="movies"></div>
   </main>
+  <script src="./index.js"></script>
 </body>
 
 </html>
