Buscando um filme através da barra de pesquisa

--- a/src/pages/Home/index.html
+++ b/src/pages/Home/index.html
@@ -24,7 +24,7 @@
           <span class="hidden">Digite algum filme para pesquisar...</span>
           <input type="text" id="input-search" placeholder="Digite algum filme para pesquisar...">
         </label>
-        <button type="button">
+        <button type="button" id="search-button">
           <span class="hidden">Buscar por filme</span>
           <img src="../../assets/search-icon.svg" alt="Ícone de uma lupa">
         </button>
@@ -37,7 +37,7 @@
   </section>
 
   <main>
-    <div class="container" id="movies"></div>
+    <div id="movies" class="container"></div>
   </main>
   <script src="./index.js"></script>
 </body>
